# FPGA-Squares

./: CMakeLists.txt  main.c
FPGAfunctions/: main.c
FPGAfunctions/include/: drawing.h  font_bmp_raw_32_bitDepth.h  test.h
FPGAfunctions/src/: drawing.c  test.c
SFMLfunctions/include/: library.h
SFMLfunctions/src/: library.cpp
include/: display.h  drawing.h  render.h  render_sw.h  test.h
src/: drawing.c  render_sw.c  test.c
